<resources>
    <string name="app_name">MyWarranty</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- splash -->
    <string name="my_warranty">MY WARRANTY</string>
    <string name="my_warranty_hands">내 손 안에 작은 보증서</string>
    <string name="mw">MW</string>

    <!-- 회원가입 -->
    <string name="sign_up_message">회원 가입에 필요한 정보를 입력해주세요.</string>
    <string name="sign_up_id_info">아이디 정보 입력</string>
    <string name="sign_up_essential_point">*필수사항</string>
    <string name="sign_up_hint">영문, 숫자 4~13자리</string>
    <string name="sign_up_id">*아이디</string>
    <string name="sign_up_pw">*비밀번호</string>
    <string name="sign_up_re_pw">*비밀번호 확인</string>
    <string name="sign_up_check">중복 확인</string>
    <string name="sign_up_personal_info">개인 정보 입력</string>
    <string name="sign_up_name">*이름</string>
    <string name="sign_up_gender">*성별</string>
    <string name="sign_up_gender_m">남자</string>
    <string name="sign_up_gender_f">여자</string>
    <string name="sign_up_dob">*생년월일</string>
    <string name="sign_up_solar">양력</string>
    <string name="sign_up_lunar">음력</string>
    <string name="sign_up_nick">닉네임</string>
    <string name="sign_up_use_nick">닉네임 사용 여부</string>
    <string name="sign_up_use">사용</string>
    <string name="sign_up_disuse">미사용</string>
    <string name="sign_up_mobile">*휴대폰번호</string>
    <string name="sign_up_skt">SKT</string>
    <string name="sign_up_kt">KT</string>
    <string name="sign_up_lgt">LGT</string>
    <string name="sign_up_receive_sms">SMS 수신여부</string>
    <string name="sign_up_receive">수신</string>
    <string name="sign_up_reject_receive">거부</string>
    <string name="sign_up_email">*이메일</string>
    <string name="sign_up_at">"@"</string>
    <string name="sign_up_receive_email">E-Mail 수신여부</string>
    <string name="sign_up">회원가입</string>

    <!-- Title -->
    <string name="my_warranty_title">MY 보증서</string>
    <string name="as_title">A/S 현황</string>
    <string name="present_title">선물내역</string>
    <string name="store_title">매장 찾기</string>
    <string name="promotion_title">프로모션</string>

    <string name="safe_password">암호</string>
    <string name="safe_content">마이워런티의 암호를 입력해주세요.</string>
    <string name="safe_new">새로운 암호를 입력해주세요.</string>
    <string name="safe_re">암호를 한번 더 입력해주세요.</string>

    <string name="cancel">취소</string>
    <string name="finish">한번 더 누르면 앱이 종료됩니다.</string>
    <string name="title_activity_my_warranty_fragment">MyWarrantyFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_asfragment">ASFragment</string>
    <string name="title_activity_present_fragment">PresentFragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_warranty_details">WarrantyDetailsActivity</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_my_warranty">내 보증서</string>
    <string name="navigation_drawer_my_warranty_count">개</string>
    <string name="navigation_drawer_notice">공지사항</string>
    <string name="navigation_drawer_rule">이용약관</string>
    <string name="navigation_drawer_setting">환경설정</string>
    <string name="navigation_drawer_logout">로그아웃</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info_content">InfoContentActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_safe">SafeActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_rule">RuleActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_version">VersionActivity</string>
</resources>
