<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/my_warranty_logo_width"
            android:layout_height="@dimen/my_warranty_logo_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_warranty"
            android:textSize="28sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_warranty_hands"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:text="@string/mw"
        android:textSize="16sp"
        android:textColor="@color/white"/>
</FrameLayout>
